--- a/common.cnf
+++ b/common.cnf
@@ -10,7 +10,7 @@ innodb_flush_neighbors             = 0
 innodb_adaptive_flushing_lwm       = 45
 innodb_io_capacity                 = 200
 innodb_io_capacity_max             = 1200
-# innodb_monitor_enable              = all
+innodb_monitor_enable              = all
 innodb_fast_shutdown               = 2
 transaction_isolation              = READ-COMMITTED
 max_connections                    = 2000
