--- a/benchmark.conf
+++ b/benchmark.conf
@@ -1,7 +1,7 @@
 #!/bin/bash
 export arr_protocols=('mongodb' 'xcom' 'mysql');
 export arr_threads=(4 8 16 24);
-export arr_total_rows=( $((4*1024*1024)) );
+export arr_total_rows=( $((512*1024)) );
 # export arr_batch_sizes=(1 4 8 16 32 64 128 256 512 1024 2048 4096 8192 16384);
 export arr_batch_sizes=(1 4 8 16 64 128 256 512 1024 2048 4096 8192);
 export arr_commit_frequencies=(0);
